--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,8 +27,8 @@ jobs:
         pip install -r requirements.txt
     - name: Make Migrations
       run: |
-        python manage.py makemigrations
-        python manage.py migrate
+        python src/manage.py makemigrations
+        python src/manage.py migrate
     - name: Run Tests
       run: |
-        python manage.py test
+        python src/manage.py test
